apps/base/domain-redirects/base/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: domain-redirects
  namespace: domain-redirects
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: domain-redirects
  type: ClusterIP
